--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -154,7 +154,9 @@ preview={snake-cpg-icra.png}}
 @INPROCEEDINGS{8324586,  
 abbr={ROBIO}, author={Xiao, Shanshan and Bing, Zhenshan and Huang, Kai and Huang, Yuhong},  booktitle={2017 IEEE International Conference on Robotics and Biomimetics (ROBIO)},   title={Snake-like robot climbs inside different pipes},   year={2017},  volume={},  number={},  pages={1232-1239},  doi={10.1109/ROBIO.2017.8324586}}
 
-@INPROCEEDINGS{8460482,  author={Bing, Zhenshan and Meschede, Claus and Huang, Kai and Chen, Guang and Rohrbein, Florian and Akl, Mahmoud and Knoll, Alois},  booktitle={2018 IEEE International Conference on Robotics and Automation (ICRA)},   title={End to End Learning of Spiking Neural Network Based on R-STDP for a Lane Keeping Vehicle},   year={2018},  volume={},  number={},  pages={4725-4732},  doi={10.1109/ICRA.2018.8460482}, preview={icra-18.png}}
+@INPROCEEDINGS{8460482,  author={Bing, Zhenshan and Meschede, Claus and Huang, Kai and Chen, Guang and Rohrbein, Florian and Akl, Mahmoud and Knoll, Alois},  booktitle={2018 IEEE International Conference on Robotics and Automation (ICRA)},   title={End to End Learning of Spiking Neural Network Based on R-STDP for a Lane Keeping Vehicle},   year={2018},  volume={},  number={},  pages={4725-4732},  doi={10.1109/ICRA.2018.8460482}, preview={icra-18.png},
+code={https://github.com/zhenshan-bing/Indirect-and-Direct-Training-of-Spiking-Neural-Networks-for-End-to-End-Control-of-a-Lane-Keeping-Veh},
+selected={false}}
 
 @ARTICLE{10.3389/fnbot.2018.00035,
 
@@ -319,7 +321,7 @@ url = {https://www.sciencedirect.com/science/article/pii/S0893608019301595},
 author = {Zhenshan Bing and Claus Meschede and Guang Chen and Alois Knoll and Kai Huang},
 keywords = {, End-to-end learning, R-STDP, Lane keeping},
 abstract = {Building spiking neural networks (SNNs) based on biological synaptic plasticities holds a promising potential for accomplishing fast and energy-efficient computing, which is beneficial to mobile robotic applications. However, the implementations of SNNs in robotic fields are limited due to the lack of practical training methods. In this paper, we therefore introduce both indirect and direct end-to-end training methods of SNNs for a lane-keeping vehicle. First, we adopt a policy learned using the Deep Q-Learning (DQN) algorithm and then subsequently transfer it to an SNN using supervised learning. Second, we adopt the reward-modulated spike-timing-dependent plasticity (R-STDP) for training SNNs directly, since it combines the advantages of both reinforcement learning and the well-known spike-timing-dependent plasticity (STDP). We examine the proposed approaches in three scenarios in which a robot is controlled to keep within lane markings by using an event-based neuromorphic vision sensor. We further demonstrate the advantages of the R-STDP approach in terms of the lateral localization accuracy and training time steps by comparing them with other three algorithms presented in this paper.},
-code={https://github.com/zhenshan-bing/cemrl},
+code={https://github.com/zhenshan-bing/Indirect-and-Direct-Training-of-Spiking-Neural-Networks-for-End-to-End-Control-of-a-Lane-Keeping-Veh},
 selected={true}
 }
 
