--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,21 @@
 ---
 
 
+@ARTICLE{9895427,
+  author={Bing, Zhenshan and Cheng, Long and Huang, Kai and Knoll, Alois},
+  journal={IEEE Robotics & Automation Magazine}, 
+  title={Simulation to Real: Learning Energy-Efficient Slithering Gaits for a Snake-Like Robot}, 
+  year={2022},
+  volume={29},
+  number={4},
+  pages={92-103},
+  doi={10.1109/MRA.2022.3204237},
+  pdf={https://mediatum.ub.tum.de/doc/1686732/bxvo5v679gooxy50vrc5y5xi1.Simulation_to_Real_Learning_Energy-Efficient_Slithering_Gaits_for_a_Snake-Like_Robot.pdf},
+  selected={true}
+}
+
+
+
 @article{bing2022meta,
   abbr={TPAMI},
   bibtex_show={true},
