--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,6 +12,7 @@
   pages={92-103},
   doi={10.1109/MRA.2022.3204237},
   pdf={https://mediatum.ub.tum.de/doc/1686732/bxvo5v679gooxy50vrc5y5xi1.Simulation_to_Real_Learning_Energy-Efficient_Slithering_Gaits_for_a_Snake-Like_Robot.pdf},
+  preview={rl_snake_RAM.png},
   selected={true}
 }
 
