--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -30,6 +30,7 @@
   pdf={https://mediatum.ub.tum.de/doc/1662422/m3y05nkuit5k7ri2moqvfpfv2.Meta-Reinforcement_Learning_in_Non-Stationary_and_Dynamic_Environments.pdf},
   html={https://sites.google.com/view/cemrl},
   code={https://github.com/zhenshan-bing/cemrl},
+  preview={cemrl.png},
   selected={true}
 }
 
