--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,8 @@
 
 
 @ARTICLE{9895427,
+  abbr={RAM},
+  bibtex_show={true},
   author={Bing, Zhenshan and Cheng, Long and Huang, Kai and Knoll, Alois},
   journal={IEEE Robotics & Automation Magazine}, 
   title={Simulation to Real: Learning Energy-Efficient Slithering Gaits for a Snake-Like Robot}, 
