--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,28 @@
 ---
 ---
 
+@article{10.1016/j.jai.2023.100020,
+  abbr={JAI},
+  bibtex_show={true},
+  author = {Bing, Zhenshan and Nitschke, Dominik and Zhuang, Genghang and Huang, Kai and Knoll, Alois},
+  title = {Towards cognitive navigation: A biologically inspired calibration mechanism for the head direction cell network},
+  journal = {Journal of Automation and Intelligence},
+  year = {2023},
+  volume = {2},
+  month = {},
+  number = {1},
+  pages = {31-41},
+  issn = {},
+  doi = {10.1016/j.jai.2023.100020},
+  language = {},
+  abstract = {},
+  keywords = {},
+  note = {},
+  pdf={https://mediatum.ub.tum.de/doc/1703008/nn74qs5zkpzbmi5zvqcywo4f0.1-s2.0-S2949855423000035-main.pdf},
+  code={https://github.com/zhenshan-bing/HDC_Calibration_code},
+  video={https://videoviewsite.wixsite.com/hdc-calibration}
+}
+
 
 @ARTICLE{9895427,
   abbr={RAM},
