--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 ---
 ---
 
-@article{10.1016/j.jai.2023.100020,
+@article{jai,
   abbr={JAI},
   bibtex_show={true},
   author = {Bing, Zhenshan and Nitschke, Dominik and Zhuang, Genghang and Huang, Kai and Knoll, Alois},
