--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,6 +17,7 @@
   keywords = {},
   note = {},
   preview={sr-mouse.png},
+  press={https://www.geo.de/wissen/forschung-und-technik/blick-in-die-wissenschaft--geo-bild-der-woche--33719978.html},
   selected={true}
 }
 
