--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,8 +17,29 @@
   keywords = {},
   note = {},
   preview={sr-mouse.png},
-  press={https://www.geo.de/wissen/forschung-und-technik/blick-in-die-wissenschaft--geo-bild-der-woche--33719978.html},
+  url ={https://www.geo.de/wissen/forschung-und-technik/blick-in-die-wissenschaft--geo-bild-der-woche--33719978.html},
   selected={true}
+}
+
+@article{tigr,
+  author = {Bing, Zhenshan and Knak, Lukas and Cheng, Long and Morin, Fabrice O. and Huang, Kai and Knoll, Alois},
+  title = {Meta-Reinforcement Learning in Nonstationary and Nonparametric Environments},
+  journal = {IEEE Transactions on Neural Networks and Learning Systems},
+  year = {2023},
+  volume = {},
+  month = {},
+  number = {},
+  pages = {1-15},
+  issn = {},
+  doi = {10.1109/tnnls.2023.3270298},
+  language = {},
+  abstract = {},
+  keywords = {},
+  note = {},
+  preview={tigr.png},
+  pdf={https://mediatum.ub.tum.de/doc/1703008/nn74qs5zkpzbmi5zvqcywo4f0.1-s2.0-S2949855423000035-main.pdf},
+  code={https://github.com/zhenshan-bing/HDC_Calibration_code},
+  video={https://videoviewsite.wixsite.com/hdc-calibration}
 }
 
 @article{jai,
