--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,13 +15,14 @@
   language = {},
   abstract = {A flexible spine is critical to the motion capability of most animals and plays a pivotal role in their agility. Although state-of-the-art legged robots have already achieved very dynamic and agile movement solely relying on their legs, they still exhibit the type of stiff movement that compromises movement efficiency. The integration of a flexible spine thus appears to be a promising approach to improve their agility, especially for small and underactuated quadruped robots that are underpowered because of size limitations. Here, we show that the lateral flexion of a compliant spine can promote both walking speed and maneuver agility for a neurorobotic mouse (NeRmo). We present NeRmo as a biomimetic robotic mouse that mimics the morphology of biological mice and their muscle-tendon actuation system. First, by leveraging the lateral flexion of the compliant spine, NeRmo can greatly increase its static stability in an initially unstable configuration by adjusting its posture. Second, the lateral flexion of the spine can also effectively extend the stride length of a gait and therefore improve the walking speeds of NeRmo. Finally, NeRmo shows agile maneuvers that require both a small turning radius and fast walking speed with the help of the spine. These results advance our understanding of spine-based quadruped locomotion skills and highlight promising design concepts to develop more agile legged robots. Lateral flexion of a compliant spine can improve motor skills of a bioinspired mouse robot.},
   keywords = {},
-  note = {},
+  note = {Reported by xxx},
   preview={sr-mouse.png},
   url ={https://www.geo.de/wissen/forschung-und-technik/blick-in-die-wissenschaft--geo-bild-der-woche--33719978.html},
   selected={true}
 }
 
 @article{tigr,
+  abbr={TNNLS},
   author = {Bing, Zhenshan and Knak, Lukas and Cheng, Long and Morin, Fabrice O. and Huang, Kai and Knoll, Alois},
   title = {Meta-Reinforcement Learning in Nonstationary and Nonparametric Environments},
   journal = {IEEE Transactions on Neural Networks and Learning Systems},
@@ -35,11 +36,7 @@
   language = {},
   abstract = {},
   keywords = {},
-  note = {},
-  preview={tigr.png},
-  pdf={https://mediatum.ub.tum.de/doc/1703008/nn74qs5zkpzbmi5zvqcywo4f0.1-s2.0-S2949855423000035-main.pdf},
-  code={https://github.com/zhenshan-bing/HDC_Calibration_code},
-  video={https://videoviewsite.wixsite.com/hdc-calibration}
+  note = {}
 }
 
 @article{jai,
