--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,7 @@
 
 @article{doi:10.1126/scirobotics.adg7165,
   abbr={Science Robotics},
+  bibtex_show={true},
   author = {Bing, Zhenshan and Rohregger, Alex and Walter, Florian and Huang, Yuhong and Lucas, Peer and Morin, Fabrice O. and Huang, Kai and Knoll, Alois},
   title = {Lateral flexion of a compliant spine improves motor performance in a bioinspired mouse robot},
   journal = {Science Robotics},
