--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,6 +18,7 @@
   keywords = {},
   note = {\url{https://www.geo.de/wissen/forschung-und-technik/blick-in-die-wissenschaft--geo-bild-der-woche--33719978.html}},
   preview={sr-mouse.png},
+  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
   selected={true}
 }
 
