--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 
 
 @article{jai,
-  abbr={JAI},
+  abbr={JAII},
   bibtex_show={true},
   author = {Bing, Zhenshan and Nitschke, Dominik and Zhuang, Genghang and Huang, Kai and Knoll, Alois},
   title = {Towards cognitive navigation: A biologically inspired calibration mechanism for the head direction cell network},
