--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,6 +6,25 @@
   bibtex_show={true},
   author = {Bing, Zhenshan and Knak, Lukas and Cheng, Long and Morin, Fabrice O. and Huang, Kai and Knoll, Alois},
   title = {Meta-Reinforcement Learning in Nonstationary and Nonparametric Environments},
+  journal = {Science Robotics},
+  year = {2023},
+  volume = {},
+  month = {},
+  number = {},
+  pages = {1-15},
+  issn = {},
+  doi = {10.1109/tnnls.2023.3270298},
+  language = {},
+  abstract = {},
+  keywords = {},
+  note = {}
+
+
+@article{tigr,
+  abbr={TNNLS},
+  bibtex_show={true},
+  author = {Bing, Zhenshan and Knak, Lukas and Cheng, Long and Morin, Fabrice O. and Huang, Kai and Knoll, Alois},
+  title = {Meta-Reinforcement Learning in Nonstationary and Nonparametric Environments},
   journal = {IEEE Transactions on Neural Networks and Learning Systems},
   year = {2023},
   volume = {},
