--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,6 +21,27 @@
 }
 
 
+@inproceedings{ bing2023icra,
+  editor = {},
+  author = {Bing, Zhenshan and Koch, Alexander and Yao, Xiangtong and Huang, Kai and Knoll, Alois},
+  title = {Meta-Reinforcement Learning via Language Instructions.},
+  booktitle = {2023 IEEE International Conference on Robotics and Automation(ICRA)},
+  year = {2023},
+  month = {May},
+  volume = {},
+  publisher = {},
+  organization = {},
+  series = {},
+  number = {},
+  pages = {},
+  isbn = {},
+  doi = {},
+  language = {},
+  abstract = {},
+  keywords = {},
+  note = {},
+}
+
 @article{tigr,
   abbr={TNNLS},
   bibtex_show={true},
