--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,6 +22,8 @@
 
 
 @inproceedings{ bing2023icra,
+  abbr={ICRA},
+  bibtex_show={true},
   editor = {},
   author = {Bing, Zhenshan and Koch, Alexander and Yao, Xiangtong and Huang, Kai and Knoll, Alois},
   title = {Meta-Reinforcement Learning via Language Instructions.},
