--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -44,6 +44,28 @@
   note = {},
 }
 
+
+@inproceedings{ ,
+  editor = {},
+  author = {Chen, Kejia and  Bing, Zhenshan and  Wu, Fan and  Meng, Yuan and  Kraft, Andre and  Haddadin, Sami and  Knoll, Alois},
+  title = {Contact-aware Shaping and Maintenance of Deformable Linear Objects With Fixtures},
+  booktitle = {2023 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS 2023)},
+  year = {2023},
+  month = {},
+  volume = {},
+  publisher = {},
+  organization = {},
+  series = {},
+  number = {},
+  pages = {},
+  isbn = {},
+  doi = {},
+  language = {},
+  abstract = {},
+  keywords = {},
+  note = {},
+}
+
 @article{tigr,
   abbr={TNNLS},
   bibtex_show={true},
