--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -45,7 +45,9 @@
 }
 
 
-@inproceedings{ ,
+@inproceedings{chen,
+  abbr={IROS},
+  bibtex_show={true},
   editor = {},
   author = {Chen, Kejia and  Bing, Zhenshan and  Wu, Fan and  Meng, Yuan and  Kraft, Andre and  Haddadin, Sami and  Knoll, Alois},
   title = {Contact-aware Shaping and Maintenance of Deformable Linear Objects With Fixtures},
