--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -477,3 +477,14 @@ ISSN={1662-5218},
    
 ABSTRACT={Visual-guided locomotion for snake-like robots is a challenging task, since it involves not only the complex body undulation with many joints, but also a joint pipeline that connects the vision and the locomotion. Meanwhile, it is usually difficult to jointly coordinate these two separate sub-tasks as this requires time-consuming and trial-and-error tuning. In this paper, we introduce a novel approach for solving target tracking tasks for a snake-like robot as a whole using a model-free reinforcement learning (RL) algorithm. This RL-based controller directly maps the visual observations to the joint positions of the snake-like robot in an end-to-end fashion instead of dividing the process into a series of sub-tasks. With a novel customized reward function, our RL controller is trained in a dynamically changing track scenario. The controller is evaluated in four different tracking scenarios and the results show excellent adaptive locomotion ability to the unpredictable behavior of the target. Meanwhile, the results also prove that the RL-based controller outperforms the traditional model-based controller in terms of tracking accuracy.}
 }
+
+@ARTICLE{10495171,
+  author={Bing, Zhenshan and Yun, Yuqi and Huang, Kai and Knoll, Alois},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence}, 
+  title={Context-Based Meta-Reinforcement Learning With Bayesian Nonparametric Models}, 
+  year={2024},
+  volume={46},
+  number={10},
+  pages={6948-6965},
+  keywords={Task analysis;Clustering algorithms;Training;Optimization;Adaptation models;Markov decision processes;Inference algorithms;Meta-reinforcement learning;task inference;task adaptation;Bayesian nonparametric model;robotic control},
+  doi={10.1109/TPAMI.2024.3386780}}
