--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -487,4 +487,6 @@ ABSTRACT={Visual-guided locomotion for snake-like robots is a challenging task, 
   number={10},
   pages={6948-6965},
   keywords={Task analysis;Clustering algorithms;Training;Optimization;Adaptation models;Markov decision processes;Inference algorithms;Meta-reinforcement learning;task inference;task adaptation;Bayesian nonparametric model;robotic control},
-  doi={10.1109/TPAMI.2024.3386780}}
+  doi={10.1109/TPAMI.2024.3386780},
+  selected={true}
+  }
