--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -479,6 +479,8 @@ ABSTRACT={Visual-guided locomotion for snake-like robots is a challenging task, 
 }
 
 @ARTICLE{10495171,
+  abbr={TPAMI},
+  bibtex_show={true},
   author={Bing, Zhenshan and Yun, Yuqi and Huang, Kai and Knoll, Alois},
   journal={IEEE Transactions on Pattern Analysis and Machine Intelligence}, 
   title={Context-Based Meta-Reinforcement Learning With Bayesian Nonparametric Models}, 
