--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -490,5 +490,6 @@ ABSTRACT={Visual-guided locomotion for snake-like robots is a challenging task, 
   pages={6948-6965},
   keywords={Task analysis;Clustering algorithms;Training;Optimization;Adaptation models;Markov decision processes;Inference algorithms;Meta-reinforcement learning;task inference;task adaptation;Bayesian nonparametric model;robotic control},
   doi={10.1109/TPAMI.2024.3386780},
+  preview={melts.png},
   selected={true}
   }
