--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -481,7 +481,7 @@ ABSTRACT={Visual-guided locomotion for snake-like robots is a challenging task, 
 @ARTICLE{10495171,
   abbr={TPAMI},
   bibtex_show={true},
-  author={<b>Bing</b>, Zhenshan and Yun, Yuqi and Huang, Kai and Knoll, Alois},
+  author={\textbf{Bing}, Zhenshan and Yun, Yuqi and Huang, Kai and Knoll, Alois},
   journal={IEEE Transactions on Pattern Analysis and Machine Intelligence}, 
   title={Context-Based Meta-Reinforcement Learning With Bayesian Nonparametric Models}, 
   year={2024},
